<resources>
    <string name="app_name">MAD</string>
    <string name="rental">Rental</string>
    <string name="menu">Menu</string>
    <string name="button">Button</string>
    <string name="toyotaallion">toyotaAllion</string>
    <string name="details_of_the_car">Details of the car</string>
    <string name="pricing_of_rental">Pricing of rental</string>
    <string name="driver_required">Driver Required?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_pick_up_location">Set pick up location</string>
    <string name="set_date">Set date</string>
    <string name="set_date_calendar">Set date</string>
    <string name="cancellations_should_be_made_48_hours_to_time_of_booking">Cancellations should be made 48 hours to time of booking</string>
    <string name="confirm">Confirm</string>
    <string name="total_price">Total price</string>



    <string name="v_pic">Upload Vehicle Image</string>
    <string name="v_doc">Upload Vehicle Documents</string>
    <string name="vehi_name">Vehicle Number</string>
    <string name="vehi_brand">Toyota</string>
    <string name="vehi_model">Prius</string>
    <string name="name">Brown White</string>
    <string name="nic12">3254635v</string>
    <string name="number">0717534563</string>
    <string name="save_emp">Submit</string>

    <string name="c_pic">Change Picture</string>
    <string name="b_pic">Browse</string>
    <string name="emp_name">Brown White</string>
    <string name="emp_id">981400950V</string>
    <string name="emp_DOB">18.05.1998</string>
    <string name="emp_email">brownwhite@gmail.com</string>
    <string name="emp_phone">0773744756</string>
    <string name="emp_post">Driver</string>
    <string name="emp_docs">Add new Documents</string>
    <string name="edit_name"></string>
    <string name="edit_eid"></string>
    <string name="edit_DOB"></string>
    <string name="edit_email"></string>
    <string name="edit_phone"></string>
    <string name="edit_post"></string>
    <string name="edit_id"></string>

    <string name="save_emp">Save Changes</string>

    <string name="delete_emp">Delete Profile</string>

    <string name="add_name">Full Name</string>
    <string name="add_id">NIC</string>
    <string name="add_DOB">Date Of Birth</string>
    <string name="add_email">Email</string>
    <string name="add_phone">Phone Number</string>
    <string name="add_post">Occupation</string>
    <string name="add_docs">Add new Documents</string>


    <string-array name="Locations">
        <item>Set Pick Up Location</item>
        <item>Colombo</item>
        <item>Negombo</item>
        <item>Jaffna</item>

    </string-array>


    <string name="user_account">User Account</string>
    <string name="full_name">Full Name</string>
    <string name="nic">NIC</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">DOB</string>
    <string name="city">City</string>
    <string name="register_date">Registered Date</string>
    <string name="edit_details">Edit Details</string>
    <string name="save_changes">Save changes</string>
    <string name="discard">Discard</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="rental_history">Rental History</string>
    <string name="profile_picture">profile picture</string>
    <string name="email1">Email</string>
    <string name="mobile1">Mobile</string>

    <string name="dob">DOB</string>


    <string name="nic1">TextView</string>
    <string name="city1">TextView</string>
    <string name="dob1">TextView</string>
    <string name="welcome_driver">welcome_driver</string>
    <string name="notifications">notifications</string>
    <string name="noti1">noti1</string>
    <string name="payment">payment</string>
    <string name="account">account</string>
    <string name="todo">TODO</string>

    <string name="john_doe1">john_doe1</string>
    <string name="driver_menu">driver menu</string>
    <string name="register_driver">register driver</string>
    <string name="drivers">drivers</string>
    <string name="delete_driver">delete driver</string>
    <string name="update_driver_details">update driver details</string>
    <string name="john_doe2">john_doe2</string>
    <string name="john_doe3">john_doe3</string>
    <string name="view1">view1</string>
    <string name="view2">view2</string>
    <string name="view3">view3</string>
    <string name="john_doe4">john_doe4</string>
    <string name="view4">view4</string>
</resources>