<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="239dp"
        android:layout_height="60dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:text="@string/welcome_driver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="98dp"
        android:layout_height="96dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toStartOf="@+id/acccbtn"
        app:layout_constraintStart_toEndOf="@+id/paybtn"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/client1" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:text="@string/notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/noti1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/noti1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:text="@string/noti1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageButton
        android:id="@+id/paybtn"
        android:layout_width="98dp"
        android:layout_height="96dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@android:drawable/checkbox_off_background" />

    <ImageButton
        android:id="@+id/acccbtn"
        android:layout_width="98dp"
        android:layout_height="96dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:contentDescription="@string/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@android:drawable/checkbox_off_background" />

</androidx.constraintlayout.widget.ConstraintLayout>